[FIX] Make site header phpl menu horbar less tall so it doesn't overlap sitesearchbar; improve phpl menu in IE6.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/3.0@17834 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/strasa.css
+++ b/styles/strasa.css
@@ -638,11 +638,14 @@ a.flip img {display: none}
 
 .horbar {
 position: absolute; z-index: 0;
-top: 0; left: 100%;
+top: 10px; left: 100%;
 margin: 0 0 0 -50%;
-height: 97px; 
-overflow: auto; 
-white-space: nowrap} 
+white-space: nowrap}
+
+* html .horbar {
+	top: 10px;
+	left: auto;
+	right: 40px}
 
 .horbar table {
 	width: auto;
@@ -651,24 +654,27 @@ white-space: nowrap}
 /* Text in the top level (visible by default) of the menu */
 .horbaritem a,
 .horbaritem a:visited {
-	padding: 10px 0 0;
+	padding: 3px 3px 6px 3px;
 	text-decoration: none;
 	font: normal 1em Verdana, Helvetica, Arial, Sans-Serif;
 	margin: 0; 
 	border-color: transparent; border-style: solid; border-width: 0 1px;
 	color: #5ae0ff; 
-	display: block; 
-	min-height: 87px; min-width: 80px;
 	text-align: center}
 
 .horbaritem a:hover {
 	text-decoration: none; 
 	background: url(strasa/options/cold/headermenuitem-hover.png) bottom center repeat-x;
-	border-color: #336699; border-style: solid; border-width: 0 1px;
+	border-color: #336699;
+	border-style: solid;
+	border-width: 0 1px;
 	color: #fff;
 }
 
-* html .horbaritem a {font-size: .8em}
+* html .horbaritem a {
+	font-size: 1em;
+	border-color: #224a5f}
+
 .mdkverbar {} 
 
 .mdksubmenu {
@@ -677,7 +683,9 @@ white-space: nowrap}
 	left: 0;
 	top: 0;
 	visibility: hidden;
-	margin-top: 0}
+	margin-top: 3px}
+	
+* html .mdksubmenu {margin-top: 0}
 
 .mdksubmenu table {width: auto} 
 
@@ -698,18 +706,15 @@ white-space: nowrap}
 	top: 5px;
 	right: 12px} 
 
-.mdkitem a {
+.mdkitem a,
+.mdkitem a:link,
+.mdkitem a:visited {
 	color: #5ae0ff;
-	padding: 3px;
+	padding: 2px 3px;
 	position: relative;
 	display: block;
-	font-weight: normal} 
-
-.mdkitem a:link {
 	font-weight: normal;
 	text-decoration: none} 
-
-.mdkitem a:visited {text-decoration: none} 
 
 .mdkitem a:hover {
 	background: transparent url(styles/strasa/options/cold/headerbg.jpg) repeat-x;
